# api-wallet-python

./: .env.example  Dockerfile  README.md  about.py  app.py  database.py  docker-compose.yml  pyproject.toml  requirements.txt  settings.toml
controllers/: userController.py
models/: users.py
routes/: auth_routes.py  user_routes.py
wallet/: app.py  models.py
wallet/blueprints/restapi/: __init__.py  category.py  invoice.py  login.py  resources.py  user.py  verify_auth.py  wallet.py
wallet/ext/: configuration.py  database.py
wallet/functions/: helpers.py
wallet/models/: Category.py  Invoice.py  User.py  Wallet.py  models.py
