[tool.poetry]
name = "api-wallet-python"
version = "0.1.0"
description = ""
authors = ["Marcos <marcoslopes.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask-sqlalchemy = "^3.1.1"
flask = "^2.3.3"
python-dotenv = "^1.0.0"
bcrypt = "^4.0.1"
mysql-connector-python = "^8.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
